--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "moduleResolution": "bundler",
     "paths": {
       "@/*": ["./src/*"],
-      "@/contexts/*": ["./src/utils/contexts/*"]
+      "@/contexts/*": ["./src/utils/contexts/*"],
+      "@/generated/*": ["./generated/*"]
     },
     "resolveJsonModule": true,
     "allowJs": true,
