main 🧊 add seed, rework to datebase

--- a/package.json
+++ b/package.json
@@ -9,50 +9,51 @@
     "start": "next start",
     "lint": "eslint . --fix",
     "format": "prettier --write .",
+    "pretty": "yarn format && yarn lint",
     "lint-inspector": "npx @eslint/config-inspector",
     "database": "docker compose up --build",
     "generate-api": "orval --config ./orval.config.ts",
-    "generate-orm": "drizzle-kit generate"
+    "generate-orm": "drizzle-kit generate && drizzle-kit push"
   },
   "dependencies": {
-    "@radix-ui/react-navigation-menu": "^1.2.0",
+    "@radix-ui/react-navigation-menu": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
-    "@siberiacancode/fetches": "^1.1.0",
-    "@siberiacancode/reactuse": "^0.0.65",
+    "@siberiacancode/fetches": "^1.2.1",
+    "@siberiacancode/reactuse": "^0.0.72",
     "@trpc/client": "^11.0.0-rc.485",
     "@trpc/server": "^11.0.0-rc.485",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.33.0",
-    "lucide-react": "^0.435.0",
-    "next": "14.2.6",
-    "pg": "^8.12.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-intl": "^6.6.8",
-    "socket.io": "^4.7.5",
-    "socket.io-client": "^4.7.5",
-    "tailwind-merge": "^2.5.2",
+    "drizzle-orm": "^0.36.3",
+    "lucide-react": "^0.460.0",
+    "next": "15.0.3",
+    "pg": "^8.13.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-intl": "^6.8.9",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
+    "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@siberiacancode/eslint": "^2.5.0",
+    "@siberiacancode/eslint": "^2.5.2",
     "@siberiacancode/prettier": "^1.1.1",
-    "@types/node": "^20",
-    "@types/pg": "^8.11.6",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "^22.9.1",
+    "@types/pg": "^8.11.10",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.20",
-    "drizzle-kit": "^0.24.1",
+    "drizzle-kit": "^0.28.1",
     "eslint-plugin-drizzle": "^0.2.3",
-    "husky": "^9.1.5",
-    "lint-staged": "^15.2.9",
-    "orval": "^7.0.1",
-    "postcss": "^8.4.41",
-    "tailwindcss": "^3.4.10",
-    "typescript": "^5"
+    "husky": "^9.1.7",
+    "lint-staged": "^15.2.10",
+    "orval": "^7.3.0",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
+    "typescript": "^5.6.3"
   },
   "lint-staged": {
     "*.js": "eslint --fix",
