--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "moduleResolution": "bundler",
     "paths": {
       "@/*": ["./src/*"],
+      "@/server": ["./app/server"],
       "@/contexts/*": ["./src/utils/contexts/*"],
       "@/generated/*": ["./generated/*"]
     },
