--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -27,6 +27,8 @@
     "@nestjs/typeorm": "^10.0.2",
     "@siberiacancode/fetches": "1.3.1",
     "axios": "^1.7.8",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
