--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "turbo",
   "private": true,
   "scripts": {
+    "prepare": "husky",
     "build": "turbo build",
     "dev": "turbo dev",
     "lint": "turbo lint",
