--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,13 +15,19 @@
     "generate-api": "orval --config ./orval.config.ts"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.4",
     "@siberiacancode/reactuse": "^0.0.73",
     "@tanstack/react-query": "^5.61.5",
     "@tanstack/react-query-devtools": "^5.62.0",
     "@tanstack/react-router": "^1.84.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "1.0.0",
     "lucide-react": "^0.462.0",
     "motion": "^11.13.0",
     "react": "^18.3.1",
